Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
                         <h3 class="mb-3">other project</h3>
                         <p class>
-                            stay tune, more c in...
+                            stay tune, more coming...
                         </p>
 
                         <a href="#" class="btn" role="button" aria-label="read more">View
@@ -320,5 +320,6 @@
     <script src="/index.js"></script>
 
 </body>
+
 
 </html>
