Update fmt.Println message to Goodbye World

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                   </svg>
                             </a>
 
-                            <a href="www.tiktok.com/@idobanj_innovation" title="follow me on tiktok">
+                            <a href="tiktok.com/@idobanj_innovation" title="follow me on tiktok">
                                 <?xml version="1.0"
                   encoding="utf-8"?>
                                 <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
@@ -323,3 +323,4 @@
 
 
 </html>
+
