Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                     <div class="social-icon">
 
-                        <a href="https://linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=olabanji-idowu-6176ab297" title="follow me on linkedin">
+                        <a href="www.linkedin.com/in/olabanji-peter-idowu-6176ab297" title="follow me on linkedin">
 
                             <?xml version="1.0" encoding="utf-8"?>
 
@@ -323,4 +323,5 @@
 
 
 </html>
+
 
