--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                     <div class="social-icon">
 
-                        <a href="www.linkedin.com/in/olabanji-peter-idowu-6176ab297" title="follow me on linkedin">
+                        <a href="https://www.linkedin.com/in/olabanji-peter-idowu-6176ab297" title="follow me on linkedin">
 
                             <?xml version="1.0" encoding="utf-8"?>
 
@@ -158,7 +158,7 @@
                   </svg>
                             </a>
 
-                            <a href="tiktok.com/@idobanj_innovation" title="follow me on tiktok">
+                            <a href="https://www.tiktok.com/@idobanj_innovation" title="follow me on tiktok">
                                 <?xml version="1.0"
                   encoding="utf-8"?>
                                 <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
@@ -323,5 +323,6 @@
 
 
 </html>
+
 
 
